--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -45,6 +45,7 @@
         android:layout_marginTop="375dp"
         android:layout_centerHorizontal="true"
         android:inputType="text"
+        android:textColor="@color/mainText"
         android:hint="Title" />
 
     <RadioGroup
