--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -14,9 +14,10 @@
         android:id="@+id/displayImageView"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:layout_marginTop="55dp"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_launcher_background" />
+        android:layout_marginTop="55dp"
+        android:src="@drawable/ic_launcher_background"
+        app:srcCompat="@drawable/image_frame_vector" />
 
     <Button
         android:id="@+id/cameraBtn"
