--- a/app/src/main/res/layout/activity_points_shop.xml
+++ b/app/src/main/res/layout/activity_points_shop.xml
@@ -46,6 +46,9 @@
         android:layout_height="70dp"
         android:layout_alignParentBottom="true"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@color/navigation"
+        app:itemIconTint="@color/mainText"
+        app:itemTextColor="@color/mainText"
         app:menu="@menu/bottom_nav_menu" />
 
     <Button
@@ -55,6 +58,9 @@
         android:layout_alignParentRight="true"
         android:background="@drawable/baseline_settings_24"
         android:foreground="@drawable/baseline_settings_24"
+        android:foregroundTint="@color/settings"
+        android:backgroundTint="@color/settings"
+        android:tint="@color/mainText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="RtlHardcoded" />
@@ -70,27 +76,27 @@
         <TextView
             android:id="@+id/pointCountNameView"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="50dp"
             android:text="Current point amount:"
             android:textColor="@color/mainText"
-            android:textSize="20dp"
+            android:textSize="30dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="30dp"/>
+            android:layout_marginTop="20dp"/>
 
         <TextView
             android:id="@+id/pointCountView"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="50dp"
             android:textColor="@color/mainText"
             android:text=""
-            android:textSize="20dp"
-            android:layout_marginTop="30dp"/>
+            android:textSize="30dp"
+            android:layout_marginTop="20dp"/>
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="392dp"
+        android:layout_width="match_parent"
+        android:layout_height="550dp"
         android:layout_marginTop="1dp"
         android:layout_weight="0.9"
         android:orientation="vertical"
@@ -121,7 +127,8 @@
                     android:textAlignment="center"
                     android:text="Temp"
                     android:textColor="@color/mainText"
-                    android:textSize="20dp" />
+                    android:textStyle="bold"
+                    android:textSize="30dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -183,7 +190,8 @@
                     android:textColor="@color/mainText"
                     android:textAlignment="center"
                     android:text="Temp"
-                    android:textSize="20dp" />
+                    android:textStyle="bold"
+                    android:textSize="30dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -252,7 +260,8 @@
                     android:textColor="@color/mainText"
                     android:textAlignment="center"
                     android:text="Temp"
-                    android:textSize="20dp" />
+                    android:textStyle="bold"
+                    android:textSize="30dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -313,7 +322,8 @@
                     android:textColor="@color/mainText"
                     android:textAlignment="center"
                     android:text="Temp"
-                    android:textSize="20dp" />
+                    android:textStyle="bold"
+                    android:textSize="30dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
