--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/row_post_image"
-        android:layout_width="414dp"
-        android:layout_height="370dp"
+        android:layout_width="414sp"
+        android:layout_height="370sp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,100 +20,109 @@
 
     <TextView
         android:id="@+id/row_post_title"
-        android:layout_width="0dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="416dp"
+        android:layout_width="0sp"
+        android:layout_height="60sp"
+        android:layout_marginStart="200sp"
+        android:layout_marginTop="430sp"
         android:text="TextView"
         android:textColor="@color/purple_200"
-        android:textSize="32dp"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/votes"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="464dp"
+        android:layout_width="0sp"
+        android:layout_height="60sp"
+        android:layout_marginStart="200sp"
+        android:layout_marginTop="490sp"
         android:text="0"
         android:textColor="@color/purple_200"
-        android:textSize="32dp"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView4"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/location"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="372dp"
+        android:layout_width="0sp"
+        android:layout_height="60sp"
+        android:layout_marginStart="200sp"
+        android:layout_marginTop="370sp"
         android:text="TextView"
         android:textColor="@color/purple_200"
-        android:textSize="32dp"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
         app:layout_constraintStart_toStartOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="416dp"
+        android:layout_width="0sp"
+        android:layout_height="60sp"
+        android:layout_marginTop="430sp"
         android:text="Name:"
+        android:textStyle="bold"
         android:textColor="@color/purple_200"
-        android:textSize="32dp"
+        android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="372dp"
+        android:layout_width="0sp"
+        android:layout_height="60sp"
+        android:layout_marginTop="370sp"
         android:text="Location:"
+        android:textStyle="bold"
         android:textColor="@color/purple_200"
-        android:textSize="32dp"
+        android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="464dp"
+        android:layout_width="0sp"
+        android:layout_height="60sp"
+        android:layout_marginTop="490sp"
         android:text="Vote count:"
+        android:textStyle="bold"
         android:textColor="@color/purple_200"
-        android:textSize="32dp"
+        android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
-        android:layout_width="440dp"
-        android:layout_height="77dp"
+        android:layout_width="440sp"
+        android:layout_height="77sp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="4sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.517"
         app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/navigation"
+        app:itemIconTint="@color/mainText"
+        app:itemTextColor="@color/mainText"
         app:menu="@menu/bottom_nav_menu" />
 
     <Button
         android:id="@+id/vote_button"
-        android:layout_width="89dp"
-        android:layout_height="95dp"
-        android:layout_marginTop="264dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="89sp"
+        android:layout_height="95sp"
+        android:layout_marginTop="264sp"
+        android:layout_marginEnd="16sp"
         android:background="@drawable/baseline_thumb_up_24"
         android:foreground="@drawable/baseline_thumb_up_24"
+        android:foregroundTint="@color/white"
+        android:backgroundTint="@color/white"
         android:text="+1"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
