--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,6 +18,7 @@
         android:gravity="top|center_horizontal"
         android:layout_width="match_parent"
         android:textColor="@color/mainText"
+        android:textColorHint="@color/mainText"
         android:layout_height="wrap_content" />
 
 
@@ -27,6 +28,7 @@
             android:layout_width="match_parent"
             android:inputType="text"
             android:textColor="@color/mainText"
+            android:textColorHint="@color/hintText"
             android:layout_height="wrap_content"/>
 
         <com.google.android.material.textfield.TextInputEditText
@@ -34,6 +36,7 @@
             android:hint="@string/password"
             android:layout_width="match_parent"
             android:textColor="@color/mainText"
+            android:textColorHint="@color/hintText"
             android:layout_height="wrap_content"
             android:inputType="textPassword"/>
 
@@ -42,6 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/mainText"
+            android:textColorHint="@color/hintText"
             android:inputType="text"
             android:hint="Username" />
 
@@ -67,6 +71,7 @@
         android:text="@string/click_to_login"
         android:layout_width="match_parent"
         android:textColor="@color/mainText"
+        android:textColorHint="@color/mainText"
         android:layout_height="wrap_content"
         android:textAlignment="center"/>
 
