--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -17,6 +17,8 @@
             android:layout_height="wrap_content"
             android:src="@drawable/back_btn"
             android:padding="14dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
             android:background="@drawable/round_back_white10_20"/>
         <TextView
             android:layout_width="wrap_content"
