--- a/app/src/main/res/layout/activity_voted_posts.xml
+++ b/app/src/main/res/layout/activity_voted_posts.xml
@@ -20,9 +20,11 @@
         android:id="@+id/Settings"
         android:layout_width="53dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/baseline_settings_24"
-        android:foreground="@drawable/baseline_settings_24"
         android:layout_alignParentRight="true"
+        android:background="@drawable/baseline_settings_24"
+        android:backgroundTint="@color/settings"
+        android:foreground="@drawable/baseline_settings_24"
+        android:foregroundTint="@color/settings"
         tools:ignore="RtlHardcoded" />
 
     <Button
@@ -39,6 +41,9 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_alignParentBottom="true"
+        android:background="@color/navigation"
+        app:itemIconTint="@color/mainText"
+        app:itemTextColor="@color/mainText"
         app:menu="@menu/bottom_nav_menu" />
 
 
