--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -16,5 +16,9 @@
 
     <color name="mainBackground">#3A3A3A</color>
     <color name="mainText">#FFFFFF</color>
+    <color name="hintText">#A5A2A2</color>
     <color name="mainButton">#325C5A</color>
+    <color name="settings">#FFFFFF</color>
+    <color name="navigation">#2B2B2B</color>
+
 </resources>
