--- a/app/src/main/res/layout/row_post_item.xml
+++ b/app/src/main/res/layout/row_post_item.xml
@@ -66,8 +66,8 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/baseline_thumb_up_24"
         android:foreground="@drawable/baseline_thumb_up_24"
-        android:foregroundTint="@color/white"
-        android:backgroundTint="@color/white"
+        android:foregroundTint="@color/like"
+        android:backgroundTint="@color/like"
         app:layout_constraintBottom_toBottomOf="@+id/row_post_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/row_post_image"
