--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="172dp"
         android:layout_marginTop="372dp"
         android:text="TextView"
-        android:textColor="@color/mainText"
+        android:textColor="@color/mainButton"
         android:textSize="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -34,11 +34,11 @@
     <TextView
         android:id="@+id/row_event_start"
         android:layout_width="320dp"
-        android:layout_height="42dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="436dp"
         android:text="TextView"
-        android:textColor="@color/mainText"
+        android:textColor="@color/mainButton"
         android:textSize="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -48,9 +48,9 @@
         android:layout_width="320dp"
         android:layout_height="42dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="512dp"
+        android:layout_marginTop="501dp"
         android:text="TextView"
-        android:textColor="@color/mainText"
+        android:textColor="@color/mainButton"
         android:textSize="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -62,7 +62,7 @@
         android:layout_marginStart="116dp"
         android:layout_marginTop="340dp"
         android:text="TextView"
-        android:textColor="@color/mainText"
+        android:textColor="@color/mainButton"
         android:textSize="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -74,7 +74,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="372dp"
         android:text="Pavadinimas:"
-        android:textColor="@color/mainText"
+        android:textColor="@color/mainButton"
+        android:textStyle="bold"
         android:textSize="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -86,7 +87,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="404dp"
         android:text="Pradžios laikas:"
-        android:textColor="@color/mainText"
+        android:textColor="@color/mainButton"
+        android:textStyle="bold"
         android:textSize="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -96,9 +98,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="480dp"
+        android:layout_marginTop="469dp"
         android:text="Pabaigos laikas:"
-        android:textColor="@color/mainText"
+        android:textColor="@color/mainButton"
+        android:textStyle="bold"
         android:textSize="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -110,7 +113,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="340dp"
         android:text="Vietovė:"
-        android:textColor="@color/mainText"
+        android:textColor="@color/mainButton"
+        android:textStyle="bold"
         android:textSize="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
