--- a/app/src/main/res/layout/activity_voted_posts.xml
+++ b/app/src/main/res/layout/activity_voted_posts.xml
@@ -34,6 +34,7 @@
         android:layout_alignParentLeft="true"
         android:text="Profile"
         android:backgroundTint="@color/mainButton"
+        android:textColor="@color/black"
         android:layout_marginLeft="5dp"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
